--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MoviesApp</string>
+    <string name="menu_main">Main</string>
+    <string name="menu_favourite">Favourite</string>
+    <string name="menu_search">Search</string>
 </resources>
