--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="menu_main">Main</string>
     <string name="menu_favourite">Favourite</string>
     <string name="menu_search">Search</string>
+    <string name="add_movie_to_favorites">Add movie to Favorites</string>
+    <string name="added_to_favorites">Added to Favorites</string>
+    <string name="trailer">Trailer</string>
 </resources>
